--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>CustomThumbnail</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <custom-thumbnail-root></custom-thumbnail-root>
 </body>
 </html>
+<!--  -->
