service worker checks

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,14 @@
 <body>
   <custom-thumbnail-root></custom-thumbnail-root>
 </body>
+<script>
+    navigator?.serviceWorker?.register("src/serviceworker/pwabuilder-adv-sw.js",{scope:'/'})
+    .then(registration => {
+      console.log('ServiceWorker registration success:',registration);
+    })
+    .catch(error => {
+      console.log('ServiceWorker registration failed:', error);
+    });
+</script>
 </html>
 <!--  -->
